--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -129,11 +129,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/black"
-                    android:textColor="@color/white"
+                    android:gravity="center"
                     android:text="take photo"
                     android:textAlignment="center"
-                    android:gravity="center"
-                    />
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
 
             </androidx.cardview.widget.CardView>
 
@@ -156,11 +156,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/white"
-                    android:textColor="@color/gray"
+                    android:gravity="center"
                     android:text="choose from gallery"
                     android:textAlignment="center"
-                    android:gravity="center"
-                    />
+                    android:textColor="@color/gray"
+                    android:textSize="18sp" />
 
             </androidx.cardview.widget.CardView>
 
