--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#707070</color>
+    <color name="lightBackground">#F4F4F4</color>
+    <color name="thirdColor">#FF000000</color>
 </resources>
