--- a/app/src/main/res/layout/activity_deal.xml
+++ b/app/src/main/res/layout/activity_deal.xml
@@ -9,7 +9,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/view16"
@@ -19,12 +23,11 @@
             android:background="@drawable/bg1"
             android:orientation="vertical">
 
-
             <View
                 android:id="@+id/view19"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2"/>
+                android:layout_weight="2" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -36,10 +39,10 @@
                     android:id="@+id/imageView6"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_marginLeft="25dp"
                     android:layout_marginTop="3dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginLeft="25dp"
+                    android:layout_weight="1"
                     app:srcCompat="@drawable/back" />
 
                 <View
@@ -52,19 +55,19 @@
                     android:id="@+id/imageView8"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
                     android:layout_marginRight="3dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1"
                     app:srcCompat="@drawable/undo" />
 
                 <ImageView
                     android:id="@+id/imageView9"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_margin="10dp"
                     android:layout_marginLeft="3dp"
+                    android:layout_weight="1"
                     app:srcCompat="@drawable/resource_do" />
 
                 <View
@@ -91,132 +94,266 @@
                 android:id="@+id/view20"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.7"/>
+                android:layout_weight="0.7" />
 
         </LinearLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="6">
+            android:layout_weight="5.6">
 
             <ImageView
-                android:id="@+id/imageView16"
+                android:id="@+id/bird_original"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 app:srcCompat="@drawable/bird1" />
 
+            <ImageView
+                android:id="@+id/bird_painting"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:alpha="0"
+                app:srcCompat="@drawable/bird_paint" />
+
+            <LinearLayout
+                android:id="@+id/layout_levelBg"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="0.5"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="45dp"
+                android:layout_marginTop="500dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="10dp"
+                    android:text="0"
+                    android:gravity="center"
+                    android:textColor="@color/thirdColor"/>
+
+                <View
+                    android:id="@+id/view18"
+                    android:layout_width="0dp"
+                    android:layout_height="3dp"
+                    android:layout_weight="5"
+                    android:background="@color/thirdColor"
+                    android:layout_gravity="center"/>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageView14"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="3"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="2dp"
+                        app:srcCompat="@drawable/reset" />
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="2"
+                        android:text="rest"
+                        android:textAlignment="center"
+                        android:textSize="14sp"
+                        android:textColor="@color/thirdColor"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_levelBt"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_weight="0.5"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="490dp"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="10dp"/>
+
+                <ImageView
+                    android:id="@+id/levelBar"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="6"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="0dp"
+                    android:src="@drawable/bar"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp"/>
+
+            </LinearLayout>
+
         </FrameLayout>
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.1"
             android:layout_marginBottom="15dp"
-            android:orientation="horizontal"
+            android:layout_weight="1.5"
             android:background="@drawable/bg2">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="20dp"
-                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageView13"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="3"
-                    android:padding="10dp"
-                    app:srcCompat="@drawable/content" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Content"
-                    android:textSize="14sp"
-                    android:textAlignment="center"
-                    android:textColor="@color/black"/>
-            </LinearLayout>
+            <View
+                android:id="@+id/view17"
+                android:layout_width="30dp"
+                android:layout_height="match_parent" />
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="20dp"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/editedImg"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="3"
-                    android:padding="10dp"
-                    app:srcCompat="@drawable/style" />
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_weight="1">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Style"
-                    android:textSize="14sp"
-                    android:textAlignment="center"
-                    android:textColor="@color/black" />
+                    <ImageView
+                        android:id="@+id/imageView13"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1.2"
+                        app:srcCompat="@drawable/no" />
 
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="35dp"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:text="Light"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:textSize="14sp" />
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="20dp"
-                android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:text="Color"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:textSize="14sp" />
 
-                <ImageView
-                    android:id="@+id/imageView14"
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:text="Other"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="3"
-                    android:padding="10dp"
-                    app:srcCompat="@drawable/color" />
+                    android:layout_weight="3.5"
+                    android:baselineAligned="false"
+                    android:paddingBottom="20dp">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Color"
-                    android:textSize="14sp"
-                    android:textAlignment="center"
-                    android:textColor="@color/black" />
-            </LinearLayout>
+                    <HorizontalScrollView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="6">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="20dp"
-                android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageView15"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="3"
-                    android:padding="10dp"
-                    app:srcCompat="@drawable/other" />
 
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Other"
-                    android:textSize="14sp"
-                    android:textAlignment="center"
-                    android:textColor="@color/black" />
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/detail1" />
+
+                            <View
+                                android:layout_width="5dp"
+                                android:layout_height="match_parent"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/detail2" />
+
+                            <View
+                                android:layout_width="5dp"
+                                android:layout_height="match_parent"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/detail3" />
+
+                            <View
+                                android:layout_width="5dp"
+                                android:layout_height="match_parent"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/detail4" />
+
+                            <View
+                                android:layout_width="5dp"
+                                android:layout_height="match_parent"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/detail5" />
+
+                        </LinearLayout>
+                    </HorizontalScrollView>
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
